--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,9 @@ dependencies:
   flutter_screenutil: ^5.9.3
   image_picker: ^1.1.2
   intl: ^0.19.0
+  lottie: ^3.1.2
+  firebase_core: ^3.6.0
+  cloud_firestore: ^5.4.4
 
 dev_dependencies:
   flutter_test:
