--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   lottie: ^3.1.2
   firebase_core: ^3.6.0
   cloud_firestore: ^5.4.4
+  shared_preferences: ^2.3.2
 
 dev_dependencies:
   flutter_test:
